--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,13 +7,19 @@ server {
 
 database {
   host = "172.28.0.2"
+  host = ${?POSTGRES_HOST}
   port = "9998"
+  port = ${?POSTGRES_PORT}
   name = "teacherauditing"
+  name = ${?POSTGRES_DB_NAME}
   username = "teacherauditing"
+  username = ${?POSTGRES_USER}
   password = "teacherauditing"
+  password = ${?POSTGRES_PASSWORD}
   max-pool-size = 4
 }
 
 admin {
   bearer = "abobus"
+  bearer = ${?SERVER_ADMIN_BEARER}
 }
